package com.dev.alan.patterns.structural.decorator;

public interface Notifier {

    String send(String message);
}
